--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -420,8 +420,8 @@ jobs:
 
   smoke-test:
     docker:
-      - image: python:3.7-alpine3.11
-      # - image: cimg/base:stable 
+      # - image: python:3.7-alpine3.11
+      - image: cimg/base:stable 
     steps:
       # Checkout code from git
       - checkout
