--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -253,7 +253,7 @@ jobs:
               # --filters "Name=tag:project,Values=udapeople" \   
   configure-infrastructure:
     docker:
-      - image: python:3.7-alpine3.16
+      - image: cimg/base:stable
     steps:
       - checkout
       - install_awscli
@@ -317,7 +317,7 @@ jobs:
   deploy-frontend:
     docker:
       # Docker image here that supports AWS CLI       
-      - image: python:3.7-alpine3.16
+      - image: cimg/base:stable
     steps:
       # Checkout code from git
       - checkout
@@ -367,7 +367,7 @@ jobs:
   deploy-backend:
     docker:
       # Docker image here that supports Ansible
-      - image: python:3.7-alpine3.11
+      - image: cimg/base:stable
       # - image: cimg/base:stable
 
     steps:
