--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,7 +113,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [backendded-build]
+          keys: [backend-cache]
       - run:
           name: Back-end build
           command: |
@@ -122,7 +122,7 @@ jobs:
              npm run build
       - save_cache:
           paths: [backend/node_modules]
-          key: backendded-build
+          key: backend-cache
       - slack/notify:
           event: fail
           template: basic_fail_1
@@ -158,7 +158,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [backendded-build]
+          keys: [backend-cache]
       - run: 
           name: Run backend test
           command: |
@@ -195,7 +195,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [backendded-build]
+          keys: [backend-cache]
       - run: 
           name: Scan backend 
           command: |
@@ -289,10 +289,10 @@ jobs:
       - checkout
       - install_awscli
       - restore_cache:
-          keys: [backendded-build]      
+          keys: [backend-cache]      
       - attach_workspace:
           at: ~/
-      # - create-dotenv-file   
+      - create-dotenv-file   
       - run:
           name: Run migrations
           command: |
@@ -382,7 +382,7 @@ jobs:
       # Add ssh keys with fingerprint
       # attach workspace
       - restore_cache:
-          keys: [backendded-build] 
+          keys: [backend-cache] 
       - attach_workspace:
           at: ~/ 
       - run:
