--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,9 @@ commands:
       - run:
           name: Install AWS CLI v2
           command: |
-            pip install awscli
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
 
   install_ansible:
     description: Install Ansible
@@ -111,7 +113,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [backend-cache-ed]
+          keys: [backend-cached]
       - run:
           name: Back-end build
           command: |
@@ -120,7 +122,7 @@ jobs:
              npm run build
       - save_cache:
           paths: [backend/node_modules]
-          key: backend-cache-ed
+          key: backend-cached
       - slack/notify:
           event: fail
           template: basic_fail_1
@@ -156,7 +158,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [backend-cache-ed]
+          keys: [backend-cached]
       - run: 
           name: Run backend test
           command: |
@@ -193,7 +195,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [backend-cache-ed]
+          keys: [backend-cached]
       - run: 
           name: Scan backend 
           command: |
@@ -251,7 +253,7 @@ jobs:
               # --filters "Name=tag:project,Values=udapeople" \   
   configure-infrastructure:
     docker:
-      - image: python:3.7-alpine3.11
+      - image: cimg/base:stable
     steps:
       - checkout
       - install_awscli
@@ -287,7 +289,7 @@ jobs:
       - checkout
       - install_awscli
       - restore_cache:
-          keys: [backend-cache-ed]      
+          keys: [backend-cached]      
       - attach_workspace:
           at: ~/
       - create-dotenv-file   
@@ -315,11 +317,11 @@ jobs:
   deploy-frontend:
     docker:
       # Docker image here that supports AWS CLI       
-      - image: amazon/aws-cli
+      - image: cimg/base:stable
     steps:
       # Checkout code from git
       - checkout
-      # - install_awscli
+      - install_awscli
       - install_nodejs
       - restore_cache:
           keys: [frontend-build]
@@ -364,9 +366,9 @@ jobs:
                     
   deploy-backend:
     docker:
-      # Docker image here that supports Ansible
-      - image: python:3.7-alpine3.11
-      # - image: cimg/base:stable
+      # # Docker image here that supports Ansible
+      # - image: python:3.7-alpine3.11
+      - image: cimg/base:stable
 
     steps:
       # Checkout code from git
@@ -380,7 +382,7 @@ jobs:
       # Add ssh keys with fingerprint
       # attach workspace
       - restore_cache:
-          keys: [backend-cache-ed] 
+          keys: [backend-cached] 
       - attach_workspace:
           at: ~/ 
       - run:
@@ -419,8 +421,8 @@ jobs:
 
   smoke-test:
     docker:
-      - image: python:3.7-alpine3.11
-      # - image: cimg/base:stable 
+      # - image: python:3.7-alpine3.11
+      - image: cimg/base:stable 
     steps:
       # Checkout code from git
       - checkout
@@ -459,7 +461,7 @@ jobs:
             # else
             #   exit 1
             # fi
-            echo "Well done my boy"
+            # echo "Well done my boy"
 
       - run:
           name: Frontend smoke test.
