--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -280,16 +280,47 @@ jobs:
       # Here's where you will add some code to rollback on failure
       - destroy-environment      
 
+  # run-migrations:
+  #   docker:
+  #     # - image: sleavely/node-awscli:14.x
+  #     - image: cicrleci/node:13.8.0
+  #   steps:
+  #     # Checkout code from git
+  #     - checkout
+  #     - install_awscli
+  #     - restore_cache:
+  #         keys: [backend-cached]      
+  #     - attach_workspace:
+  #         at: ~/
+  #     - create-dotenv-file   
+  #     - run:
+  #         name: Run migrations
+  #         command: |
+  #           cd backend
+  #           npm install
+  #           # npm run build
+  #           npm run migrations > migrations_dump.txt
+  #     - run:
+  #         name: Send migration results to kvdb.io
+  #         command: |
+  #           # Your code here
+  #           if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+  #           then
+  #             curl https://kvdb.io/XKqqQi6NXVQbTawYKbZxy/migration_${CIRCLE_WORKFLOW_ID:0:7} -d "1"
+  #           else
+  #             curl https://kvdb.io/XKqqQi6NXVQbTawYKbZxy/migration_${CIRCLE_WORKFLOW_ID:0:7} -d "0"
+  #           fi
+  #     - destroy-environment
+  #     # Here's where you will add some code to rollback on failure
+
   run-migrations:
     docker:
-      # - image: sleavely/node-awscli:14.x
-      - image: cicrleci/node:13.8.0
+      - image: cimg/node:13.8.0
     steps:
       # Checkout code from git
       - checkout
-      - install_awscli
       - restore_cache:
-          keys: [backend-cached]      
+          keys: [backendded-build]      
       - attach_workspace:
           at: ~/
       - create-dotenv-file   
@@ -297,8 +328,8 @@ jobs:
           name: Run migrations
           command: |
             cd backend
-            npm install
-            # npm run build
+            npm i
+            npm run build
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to kvdb.io
@@ -311,7 +342,7 @@ jobs:
               curl https://kvdb.io/XKqqQi6NXVQbTawYKbZxy/migration_${CIRCLE_WORKFLOW_ID:0:7} -d "0"
             fi
       - destroy-environment
-      # Here's where you will add some code to rollback on failure
+
   
 
   deploy-frontend:
