--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -33,6 +33,10 @@ Resources:
           FromPort: 9093
           ToPort: 9093
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 5432
+          ToPort: 5432
+          CidrIp: 0.0.0.0/0  
 
 
   EC2Instance:
